--- a/models/batch-pay.v1.yaml
+++ b/models/batch-pay.v1.yaml
@@ -1,4 +1,4 @@
-title: bach-pay
+title: 批量付款对象
 type: object
 description: 批次付款object
 properties:
@@ -32,3 +32,5 @@ properties:
   failedCount:
     type: string
     description: 失败笔数
+x-tags:
+  - 通用
