--- a/models/card-recharge-info.v1.yaml
+++ b/models/card-recharge-info.v1.yaml
@@ -1,6 +1,6 @@
-title: card-recharge-info
+title: 卡充值记录对象
 type: object
-description: 虚拟卡充值记录
+description: 卡充值记录
 properties:
   bankTransferId:
     type: string
@@ -14,6 +14,8 @@ properties:
   status:
     type: string
     description: 交易状态，只有交易成功
+    enum:
+      - SUCCESS
   amount:
     type: string
     description: 金额
@@ -26,3 +28,13 @@ properties:
   createTime:
     type: string
     description: 创建时间
+required:
+  - bankTransferId
+  - accountName
+  - accountNumber
+  - status
+  - amount
+  - currency
+  - createTime
+x-tags:
+  - Models
