--- a/models/payee-bank-account.v1.yaml
+++ b/models/payee-bank-account.v1.yaml
@@ -1,79 +1,48 @@
-title: payee-bank-account
+title: 收款人银行卡信息对象
 type: object
+description: 收款人银行卡信息
 properties:
-  currencys:
-    type: array
-    description: 币种
-    items: {}
-  accountName:
+  payeeBankAccountId:
     type: string
-    description: 账户名称
-  accountPhone:
+    description: 外部收款人银行卡账户编号
+    maxLength: 32
+  accountType:
     type: string
-    description: 关联手机号
-  cardNumber:
-    type: string
-    description: 银行卡号
-  bindType:
-    type: string
-    description: 对公、对私
-  city:
-    type: string
-    description: 银行城市
-  province:
-    type: string
-    description: 银行省份
-  prcptcd:
-    type: string
-    description: 大额行号
-  address:
-    type: string
-    description: 银行地址
-  branchName:
-    type: string
-    description: 支行名称
-  name:
-    type: string
-    description: 银行名称
-  code:
-    type: string
-    description: 银行编号
+    enum:
+      - ENTERPRISE
+      - INDIVIDUAL
+    description: |-
+      银行卡账户绑定类型：
+         ENTERPRISE: 对公类型
+         INDIVIDUAL: 对私类型
   region:
     type: string
-    description: "    CN(\"CN\", \"中国大陆\"),\n    US(\"US\", \"美国\"),\n    FR(\"FR\", \"法国\"),\n    DE(\"DE\", \"德国\"),\n    IT(\"IT\", \"意大利\"),\n    ES(\"ES\", \"西班牙\"),\n    GB(\"GB\", \"英国\"),\n    HK(\"HK\", \"中国香港\");"
-  userType:
+    description: "    CN(\"CN\", \"中国大陆\"),\n    US(\"US\", \"美国\"),\n    FR(\"FR\", \"法国\"),\n    DE(\"DE\", \"德国\"),\n    IT(\"IT\", \"意大利\"),\n    ES(\"ES\", \"西班牙\"),\n    GB(\"GB\", \"英国\"),\n    HK(\"HK\", \"中国香港\")"
+    enum:
+      - CN
+      - US
+      - FR
+      - DE
+      - IT
+      - ES
+      - GB
+      - HK
+    minLength: 2
+    maxLength: 2
+  cnyBankInfo:
+    $ref: ./CNY-bank-info.v1.yaml
+  foreignBankInfo:
+    $ref: ./foreign-bank-info.v1.yaml
+  status:
     type: string
-    description: "    INDIVIDUAL(\"个人\", \"0\"),\n    ENTERPRISE(\"企业\", \"1\");"
-  cardType:
-    type: string
-    description: "    DEBIT(0, \"借记卡\"),\n    CREDIT(1, \"信用卡\"),\n    CORPORATE(2, \"对公银行卡\");"
-  swiftCode:
-    type: string
-    description: 银行所在地为非大陆时必填
-  sortCode:
-    type: string
-    description: '银行分类号码:银行所在地为英国时必填'
-  routingNumber:
-    type: string
-    description: 银行所在地为美国时必填
-  payeeInfo:
-    type: object
-    properties:
-      name:
-        type: string
-        description: 姓名
-      certType:
-        type: string
-        description: 证件类型
-      certNo:
-        type: string
-        description: 证件号码
-      type:
-        type: string
-        description: 收款人类型：公司、个人
-  attachementId:
-    type: string
-    description: 附件id
-  extAccountId:
-    type: string
-    description: 外部单号
+    description: "    WAITING_DOCUMENT(\"待完善材料\"),\n    WAITING_CHECK(\"待审核\"),\n    SUCCESS(\"成功\"),\n    FAILED(\"失败\")"
+    enum:
+      - WAITING_DOCUMENT
+      - WAITING_CHECK
+      - SUCCESS
+      - FAILED
+required:
+  - payeeBankAccountId
+  - accountType
+  - region
+  - status
