--- a/models/payment.v1.yaml
+++ b/models/payment.v1.yaml
@@ -37,7 +37,7 @@ properties:
     description: 付款单创建时间
   status:
     type: string
-    description: "    ON_GOING(\"付款中\"),\n    SUCCESS(\"付款成功\"),\n    FAILED(\"付款失败\"),\n    REFUNDING(\"退款中\"),\n    REFUNDED(\"已退款\"),\n    CANCELED(\"已撤销\"),\n    EXTERNAL_CHECKING(\"等待外部审核\")"
+    description: "    ON_GOING(\"付款中\"),\n    SUCCESS(\"付款成功\"),\n    FAILED(\"付款失败\"),\n    EXTERNAL_CHECKING(\"审核中\")"
     enum:
       - ON_GOING
       - SUCCESS
@@ -55,15 +55,15 @@ properties:
   rateTime:
     type: string
     description: 汇率时间
-  commissionReceivable:
-    type: string
-    description: 应收手续费
   commissionReceived:
     type: string
-    description: 实收手续费
+    description: 实收手续费（源币种）
   payeeBankAccountId:
     type: string
     description: 收款人id
   paymentId:
     type: string
     description: 外部流水号
+  refundAmount:
+    type: string
+    description: 退款金额（源币种，当退汇时有该金额）
