--- a/models/card-recharge-info.v1.yaml
+++ b/models/card-recharge-info.v1.yaml
@@ -1,30 +1,24 @@
 title: 卡充值记录对象
 type: object
 description: 卡充值记录
+x-tags:
+  - Models
 properties:
   bankTransferId:
     type: string
-    description: 银行转账ID
+    description: 充值流水号
   accountName:
     type: string
-    description: 账户名称
+    description: 打款人账户名称
   accountNumber:
     type: string
-    description: 账户号
-  status:
-    type: string
-    description: 交易状态，只有交易成功
-    enum:
-      - SUCCESS
+    description: 打款人账号
   amount:
     type: string
     description: 金额
   currency:
     type: string
     description: 币种
-  rfb:
-    type: string
-    description: 银行附言
   createTime:
     type: string
     description: 创建时间
@@ -32,9 +26,6 @@ required:
   - bankTransferId
   - accountName
   - accountNumber
-  - status
   - amount
   - currency
   - createTime
-x-tags:
-  - Models
