--- a/supplier-payment.v1.yaml
+++ b/supplier-payment.v1.yaml
@@ -313,7 +313,7 @@ paths:
         in: path
         required: true
     get:
-      summary: 获取批量付款明细
+      summary: 获取付款明细
       responses:
         '200':
           description: OK
